[gd_scene load_steps=2 format=3 uid="uid://67xb1ovg18nt"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_qraha"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_qraha")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -952.0
offset_top = -536.0
offset_right = 952.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Star Dust" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -400.0
offset_right = 281.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "Star Dust"

[node name="ButtonControl" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Story" type="Button" parent="Control/ButtonControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -136.0
offset_right = 81.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Story"

[node name="Time Trial" type="Button" parent="Control/ButtonControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 64.0
offset_right = 154.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Time Trial"

[node name="LoadingControl" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingBar" type="ProgressBar" parent="Control/LoadingControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.0
offset_top = -48.0
offset_right = -176.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Control/ButtonControl/Story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="Control/ButtonControl/Time Trial" to="." method="_on_time_trial_pressed"]
